<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/jbl"
        android:layout_width="365dp"
        android:layout_height="214dp"
        app:srcCompat="@drawable/image6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="16dp" />


    <TextView
        android:id="@+id/bagd"
        android:layout_width="374dp"
        android:layout_height="136dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="149dp"
        android:text="@string/jbl"
        android:textColor="@color/colorblack"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/bprice"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="114dp"
        android:layout_marginStart="24dp"
        android:text="@string/ava"
        android:textColor="@color/colorgreen"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/avail"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignEnd="@+id/buy"
        android:layout_alignTop="@+id/bprice"
        android:text="@string/p4"
        android:textColor="@color/colorblack"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/iicross"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_toEndOf="@+id/cart"
        android:text="@string/a15"
        android:textColor="@color/colorblack"
        android:textSize="30dp" />





    <Button
        android:id="@+id/cart"
        style="@style/edittext1"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:text="ADD TO CART"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/buy"

        style="@style/edittext1"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/cart"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="43dp"
        android:text="BUY"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="471dp" />

</RelativeLayout>
