<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/bagd"
        android:layout_width="191dp"
        android:layout_height="434dp"
        android:layout_alignBottom="@+id/iicross"
        android:layout_alignParentEnd="true"
        android:text="@string/sony"
        android:textColor="@color/colorblack"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/bprice"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/avail"
        android:layout_marginBottom="111dp"
        android:text="@string/ava1"
        android:textColor="@color/colorred"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/avail"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="169dp"
        android:layout_marginStart="42dp"
        android:text="@string/p3"
        android:textColor="@color/colorblack"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/iicross"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bprice"
        android:layout_marginBottom="54dp"
        android:text="@string/a16"
        android:textColor="@color/colorblack"
        android:textSize="30dp" />

    <Button
        android:id="@+id/cart"
        style="@style/edittext1"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:text="ADD TO CART"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/buy"

        style="@style/edittext1"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:text="BUY"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="471dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/image7" />
</RelativeLayout>