<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="239dp"
        android:layout_height="216dp"
        app:srcCompat="@drawable/image8"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <TextView
        android:id="@+id/bagd"
        android:layout_width="364dp"
        android:layout_height="247dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView20"
        android:text="@string/b1"
        android:textColor="@color/colorblack"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="216dp" />

    <TextView
        android:id="@+id/bprice"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:layout_toEndOf="@+id/imageView20"
        android:text="@string/ava1"
        android:textColor="@color/colorred"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/avail"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:layout_toEndOf="@+id/imageView20"
        android:text="@string/p5"
        android:textColor="@color/colorblack"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/iicross"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/imageView20"
        android:text="@string/a17"
        android:textColor="@color/colorblack"
        android:textSize="20dp" />

    <Button
        android:id="@+id/cart"
        style="@style/edittext1"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:text="ADD TO CART"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/buy"

        style="@style/edittext1"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/imageView20"
        android:text="BUY"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="471dp" />
</RelativeLayout>