<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ionei"
        android:layout_width="195dp"
        android:layout_height="313dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/image3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/cart"
        style="@style/edittext1"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="ADD TO CART"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/buy"

        style="@style/edittext1"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:text="BUY"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/iphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="142dp"
        android:text="@string/a12"
        android:textColor="@color/colorblack"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="367dp" />

    <TextView
        android:id="@+id/bagd"
        android:layout_width="193dp"
        android:layout_height="470dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        android:text="@string/oneplus"
        android:textColor="@color/colorblack"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/bprice"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="96dp"
        android:text="@string/p2"
        android:textColor="@color/colorblack"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/avail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/cart"
        android:layout_marginBottom="55dp"
        android:text="@string/ava"
        android:textColor="@color/colorgreen"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="418dp" />
</RelativeLayout>