<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/baggit"
        android:layout_width="wrap_content"
        android:layout_height="289dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/image11"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/bagd"
        android:layout_width="371dp"
        android:layout_height="211dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/ba2"
        android:textColor="@color/colorblack"
        android:textSize="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/bprice"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:text="@string/p8"
        android:textColor="@color/colorblack"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="425dp" />

    <TextView
        android:id="@+id/avail"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:text="@string/ava1"
        android:textColor="@color/colorred"
        android:textSize="25dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="425dp" />

    <Button
        android:id="@+id/cart"
        style="@style/edittext1"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="58dp"
        android:text="ADD TO CART"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="466dp" />

    <Button
        android:id="@+id/buy"

        style="@style/edittext1"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:text="BUY"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="471dp" />
</RelativeLayout>